refactor: reduce usage of java deprecated APIs