@@ -401,7 +401,7 @@ public class OClassRemote extends OClassImpl {
     try {
       // FORMAT FLOAT LOCALE AGNOSTIC
       final String cmd =
-          String.format("alter class `%s` oversize %s", name, new Float(overSize).toString());
+          String.format("alter class `%s` oversize %s", name, Float.valueOf(overSize).toString());
       database.command(cmd).close();
     } finally {
       releaseSchemaWriteLock();
