@@ -292,7 +292,7 @@ public class OViewRemote extends OViewImpl {
     try {
       // FORMAT FLOAT LOCALE AGNOSTIC
       final String cmd =
-          String.format("alter view `%s` oversize %s", name, new Float(overSize).toString());
+          String.format("alter view `%s` oversize %s", name, Float.valueOf(overSize).toString());
       database.command(cmd).close();
     } finally {
       releaseSchemaWriteLock();
